[package]
name = "rusty-snow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
x11 = "2.19.1"
png = "0.17.2"
bincode = "1.3.3"
byteorder = "1.4.3"
glium = "0.30.2"
glutin = "*"
gilrs = "*"
lazy_static = "1.4.0"
